--- a/Index.html
+++ b/Index.html
@@ -9,21 +9,21 @@
     <meta name="keywords" content="Indie, periodismo, independiente, periodismo indepentiente, deportes, sociedad, tecnologia, entrevistas, tops, cultura, pablo toscano, Assassin’s Creed, tango, Gardel, arsenico, Almagro">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="CSS/Archivo.css"> -->
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/Normalize.css">
+    <link rel="stylesheet" href="css/">
+    <link rel="stylesheet" href="css/Normalize.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="icon" href="../Imagenes/logo.png">
+    <link rel="icon" href="../imagenes/logo.png">
     <title>Indie Post - Inicio</title>
 </head>
 
 <body>
     <header>
-        <a href="Index.html"><img class="logo__pagina" src="./Imagenes/logo.png" alt="logo"></a>
+        <a href="index.html"><img class="logo__pagina" src="./imagenes/logo.png" alt="logo"></a>
     </header>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand menu__nav" href="./Index.html">Inicio</a>
+        <a class="navbar-brand menu__nav" href="./index.html">Inicio</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -32,21 +32,21 @@
             <li class="nav-item">
               <a class="nav-link dropdown-toggle menu__nav" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="./Paginas/Tecnología.html">Tecnología</a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item menu__dropdown" href="./Paginas/Tops.html">Tops</a></li>
-                <li><a class="dropdown-item menu__dropdown" href="./Paginas/Entrevistas.html">Entrevistas</a></li>
+                <li><a class="dropdown-item menu__dropdown" href="./paginas/tops.html">Tops</a></li>
+                <li><a class="dropdown-item menu__dropdown" href="./paginas/entrevistas.html">Entrevistas</a></li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link menu__nav" href="./Paginas/Cultura.html">Cultura</a>
+              <a class="nav-link menu__nav" href="./paginas/cultura.html">Cultura</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link menu__nav" href="./Paginas/Sociedad.html">Sociedad</a>
+              <a class="nav-link menu__nav" href="./paginas/sociedad.html">Sociedad</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link menu__nav" href="./Paginas/Deportes.html">Deportes</a>
+              <a class="nav-link menu__nav" href="./paginas/deportes.html">Deportes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link menu__nav" href="./Paginas/Contacto.html">Contacto</a>
+              <a class="nav-link menu__nav" href="./paginas/contacto.html">Contacto</a>
             </li>
           </ul>
           <form class="d-flex barra__busqueda">
@@ -65,7 +65,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./Imagenes/pablo-toscano-web-2-da-vinci.jpg" class="d-block w-100 notas" alt="Foto Pablo Toscano">
+            <img src="./imagenes/pablo-toscano-web-2-da-vinci.jpg" class="d-block w-100 notas" alt="Foto Pablo Toscano">
             <div class="carousel-caption d-none d-md-block texto__carrusel">
               <h5>Pablo Toscano, director técnico de animación de uno de los juegos más importantes de la década
                 pasada</h5>
@@ -76,7 +76,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./Imagenes/museo_casa_carlos_gardel_9.jpg" class="d-block w-100 notas" alt="Entrada Museo Casa Gardel">
+            <img src="./imagenes/museo_casa_carlos_gardel_9.jpg" class="d-block w-100 notas" alt="Entrada Museo Casa Gardel">
             <div class="carousel-caption d-none d-md-block texto-carrusel texto__gardel">
               <h5>La casa del tango</h5>
               <p>Un recorrido por la casa de uno de los máximos exponentes del tango, Carlos Gardel, tras su
@@ -84,7 +84,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./Imagenes/carlos-casares-se-sumo-a___pIayC2QV2_1200x630__1.jpg" class="d-block w-100 notas" alt="Entrada Carlos Casares">
+            <img src="./imagenes/carlos-casares-se-sumo-a___pIayC2QV2_1200x630__1.jpg" class="d-block w-100 notas" alt="Entrada Carlos Casares">
             <div class="carousel-caption d-none d-md-block texto__carrusel">
               <h5>Arsénico en el agua, una problemática común en muchas ciudades argentinas</h5>
               <p>El agua es vital para el cuerpo humano pero, desde hace muchos años, en varias ciudades como Carlos
@@ -107,7 +107,7 @@
         <section class="grid">
         <div class="grid1">
             <article class="nota__toscano">
-                <img class="foto__toscano" src="./Imagenes/pablo-toscano-web-2-da-vinci.jpg" alt="Foto Pablo Toscano">
+                <img class="foto__toscano" src="./imagenes/pablo-toscano-web-2-da-vinci.jpg" alt="Foto Pablo Toscano">
                 <h1>Pablo Toscano, director técnico de animación de uno de los juegos más importantes de la década
                     pasada</h1>
                 <p>Pablo Toscano se fue de Argentina en 2003 hacia Quebec, donde comenzó a trabajar en la compañía Frima
@@ -116,7 +116,7 @@
                     más importantes del 2018, el Assassin’s Creed Odyssey.</p>
             </article>
             <article class="nota__gardel">
-                <img class="foto__gardel" src="./Imagenes/museo_casa_carlos_gardel_9.jpg" alt="Museo Casa Carlos Gardel">
+                <img class="foto__gardel" src="./imagenes/museo_casa_carlos_gardel_9.jpg" alt="Museo Casa Carlos Gardel">
                 <h2 class="titulo__gardel">La casa del tango</h2>
                 <p>Un recorrido por la casa de uno de los máximos exponentes del tango, Carlos Gardel, tras su
                     reapertura.</p>
@@ -124,7 +124,7 @@
         </div>
         <div class="grid2">
             <article class="nota__arsenico">
-                <img class="foto__casares" src="./Imagenes/carlos-casares-se-sumo-a___pIayC2QV2_1200x630__1.jpg"
+                <img class="foto__casares" src="./imagenes/carlos-casares-se-sumo-a___pIayC2QV2_1200x630__1.jpg"
                     alt="Cartel Carlos Casares">
                 <h2 class="titulo__arsenico">Arsénico en el agua, una problemática común en muchas ciudades argentinas</h2>
                 <p>El agua es vital para el cuerpo humano pero, desde hace muchos años, en varias ciudades como Carlos
@@ -133,7 +133,7 @@
                     tóxico.</p>
             </article>
             <article class="nota__almagro">
-                <img class="foto__gimnasio" src="./Imagenes/Almagro.jpg" alt="gimnasio">
+                <img class="foto__gimnasio" src="./imagenes/Almagro.jpg" alt="gimnasio">
                 <h2 class="titulo__almagro">Almagro Boxing Club: una verdadera cuna de campeones</h2>
                 <p>Almagro Boxing Club fue el primer gimnasio de boxeo en Argentina. De él salieron grandes campeones,
                     tanto olímpicos como mundiales.</p>
@@ -141,7 +141,7 @@
         </div>
         </section>
     <div>
-        <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp" src="./Imagenes/Iconos/iconowhatsapp.png"
+        <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp" src="./imagenes/Iconos/iconowhatsapp.png"
                 alt="IconoWhatsapp"></a>
     </div>
     <footer>
@@ -151,11 +151,11 @@
         </div>
         <div class="redes">
             <a href="https://www.facebook.com/tomasaronnasanmartin/" target="blank"><img id="facebook"
-                    src="./Imagenes/Iconos/iconofacebook.png" alt="facebook"></a>
+                    src="./imagenes/iconos/iconofacebook.png" alt="facebook"></a>
             <a href="https://www.instagram.com/tomasaronna/" target="blank"><img id="instagram"
-                    src="./Imagenes/Iconos/iconoinstagram.png" alt="instagram"></a>
+                    src="./imagenes/iconos/iconoinstagram.png" alt="instagram"></a>
             <a href="https://twitter.com/TomasAronna" target="blank"><img id="twitter"
-                    src="./Imagenes/Iconos/iconotwitter.png" alt="twitter"></a>
+                    src="./imagenes/iconos/iconotwitter.png" alt="twitter"></a>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
