--- a/Paginas/Contacto.html
+++ b/Paginas/Contacto.html
@@ -9,41 +9,56 @@
         <meta name="description" content="¡Contactate con nosotros! Indie Post, un medio periodístico independiente.">
         <meta name="keywords" content="Indie, periodismo, independiente, periodismo independiente, contacto, formulario, formulario de contacto">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-        <link rel="stylesheet" href="../CSS/Archivo.css">
-        <link rel="stylesheet" href="../CSS/Normalize.css">
+        <!-- <link rel="stylesheet" href="../css/Archivo.css"> -->
+        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/Normalize.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600&display=swap" rel="stylesheet">
-        <link rel="icon" href="../Imagenes/logo.png">
+        <link rel="icon" href="../imagenes/logo.png">
         <title>Indie Post - Contacto</title>
     </head>
 </head>
 
 <body>
     <header>
-        <a href="../Index.html"><img class="logo" src="../Imagenes/logo.png" alt="logo"></a>
+        <a href="../index.html"><img class="logo" src="../imagenes/logo.png" alt="logo"></a>
     </header>
-    <nav class="navegacion"> 
-        <ul class="menu">
-            <li><a href="../Index.html">Inicio</a></li>
-            <li><a href="../Paginas/Tecnología.html">Tecnología</a>
-                <ul>
-                    <li><a href="../Paginas/Tops.html">Tops</a></li>
-                    <li><a href="./Paginas/Entrevistas.html">Entrevistas</a></li>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand menu__nav" href="./index.html">Inicio</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link dropdown-toggle menu__nav" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="./Paginas/Tecnología.html">Tecnología</a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item menu__dropdown" href="./paginas/tops.html">Tops</a></li>
+                  <li><a class="dropdown-item menu__dropdown" href="./paginas/entrevistas.html">Entrevistas</a></li>
                 </ul>
-            </li>
-            <li><a href="../Paginas/Sociedad.html">Sociedad</a></li>
-            <li><a href="../Paginas/Cultura.html">Cultura</a></li>
-            <li><a href="../Paginas/Deportes.html">Deportes</a></li>
-            <li><a href="../Paginas/Contacto.html" target="blank">Contacto</a></li>
-            <div class="my-navbar busqueda">
-                <form class="form-inline">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
-                </form>
-                </div>
-        </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link menu__nav" href="./paginas/cultura.html">Cultura</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link menu__nav" href="./paginas/sociedad.html">Sociedad</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link menu__nav" href="./paginas/deportes.html">Deportes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link menu__nav" href="./paginas/contacto.html">Contacto</a>
+              </li>
+            </ul>
+            <form class="d-flex barra__busqueda">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="boton__busqueda" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
     </nav>
-        <form class="formulario">
+    <form class="formulario">
             <h1>Contacto</h1>
             <br>
             <label for="name">Escriba su nombre</label>
@@ -108,15 +123,15 @@
         </form>
         
     <div>
-        <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp" src="../Imagenes/Iconos/iconowhatsapp.png" alt="IconoWhatsapp"></a>
+        <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp" src="../imagenes/Iconos/iconowhatsapp.png" alt="IconoWhatsapp"></a>
     </div>
     <footer>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Et voluptatem, ex maxime incidunt quisquam adipisci a
         odit provident, est exercitationem autem sapiente vel nisi quasi reiciendis, numquam perspiciatis nulla at.
         <div class="redes">
-            <a href="https://www.facebook.com/tomasaronnasanmartin/" target="blank"><img id="facebook" src="../Imagenes/Iconos/iconofacebook.png" alt="facebook"></a>
-            <a href="https://www.instagram.com/tomasaronna/" target="blank"><img id="instagram" src="../Imagenes/Iconos/iconoinstagram.png" alt="instagram"></a>
-            <a href="https://twitter.com/TomasAronna" target="blank"><img id="twitter" src="../Imagenes/Iconos/iconotwitter.png" alt="twitter"></a>
+            <a href="https://www.facebook.com/tomasaronnasanmartin/" target="blank"><img id="facebook" src="../imagenes/Iconos/iconofacebook.png" alt="facebook"></a>
+            <a href="https://www.instagram.com/tomasaronna/" target="blank"><img id="instagram" src="../imagenes/Iconos/iconoinstagram.png" alt="instagram"></a>
+            <a href="https://twitter.com/TomasAronna" target="blank"><img id="twitter" src="../imagenes/Iconos/iconotwitter.png" alt="twitter"></a>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
