--- a/Paginas/Contacto.html
+++ b/Paginas/Contacto.html
@@ -21,7 +21,7 @@
 
 <body>
     <header>
-        <a href="../index.html"><img class="logo" src="../imagenes/logo.png" alt="logo"></a>
+      <a href="index.html"><img class="logo__pagina" src="./imagenes/logo.png" alt="logo"></a>
     </header>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
