--- a/Paginas/Contacto.html
+++ b/Paginas/Contacto.html
@@ -126,14 +126,19 @@
         <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp" src="../imagenes/Iconos/iconowhatsapp.png" alt="IconoWhatsapp"></a>
     </div>
     <footer>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Et voluptatem, ex maxime incidunt quisquam adipisci a
-        odit provident, est exercitationem autem sapiente vel nisi quasi reiciendis, numquam perspiciatis nulla at.
-        <div class="redes">
-            <a href="https://www.facebook.com/tomasaronnasanmartin/" target="blank"><img id="facebook" src="../imagenes/Iconos/iconofacebook.png" alt="facebook"></a>
-            <a href="https://www.instagram.com/tomasaronna/" target="blank"><img id="instagram" src="../imagenes/Iconos/iconoinstagram.png" alt="instagram"></a>
-            <a href="https://twitter.com/TomasAronna" target="blank"><img id="twitter" src="../imagenes/Iconos/iconotwitter.png" alt="twitter"></a>
-        </div>
-    </footer>
+      <div class="footloose">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Et voluptatem, ex maxime incidunt quisquam adipisci a
+      odit provident, est exercitationem autem sapiente vel nisi quasi reiciendis, numquam perspiciatis nulla at.
+      </div>
+      <div class="redes">
+          <a href="https://www.facebook.com/tomasaronnasanmartin/" target="blank"><img id="facebook"
+                  src="../imagenes/iconos/iconofacebook.png" alt="facebook"></a>
+          <a href="https://www.instagram.com/tomasaronna/" target="blank"><img id="instagram"
+                  src="../imagenes/iconos/iconoinstagram.png" alt="instagram"></a>
+          <a href="https://twitter.com/TomasAronna" target="blank"><img id="twitter"
+                  src="../imagenes/iconos/iconotwitter.png" alt="twitter"></a>
+      </div>
+  </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
 </body>
