--- a/Paginas/Contacto.html
+++ b/Paginas/Contacto.html
@@ -25,30 +25,30 @@
     </header>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand menu__nav" href="./index.html">Inicio</a>
+          <a class="navbar-brand menu__nav" href="../index.html">Inicio</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link dropdown-toggle menu__nav" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="./Paginas/Tecnología.html">Tecnología</a>
+                <a class="nav-link dropdown-toggle menu__nav" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="../Paginas/Tecnología.html">Tecnología</a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item menu__dropdown" href="./paginas/tops.html">Tops</a></li>
-                  <li><a class="dropdown-item menu__dropdown" href="./paginas/entrevistas.html">Entrevistas</a></li>
+                  <li><a class="dropdown-item menu__dropdown" href="../paginas/tops.html">Tops</a></li>
+                  <li><a class="dropdown-item menu__dropdown" href="../paginas/entrevistas.html">Entrevistas</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link menu__nav" href="./paginas/cultura.html">Cultura</a>
+                <a class="nav-link menu__nav" href="../paginas/cultura.html">Cultura</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link menu__nav" href="./paginas/sociedad.html">Sociedad</a>
+                <a class="nav-link menu__nav" href="../paginas/sociedad.html">Sociedad</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link menu__nav" href="./paginas/deportes.html">Deportes</a>
+                <a class="nav-link menu__nav" href="../paginas/deportes.html">Deportes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link menu__nav" href="./paginas/contacto.html">Contacto</a>
+                <a class="nav-link menu__nav" href="../paginas/contacto.html">Contacto</a>
               </li>
             </ul>
             <form class="d-flex barra__busqueda">
