--- a/Paginas/Cultura.html
+++ b/Paginas/Cultura.html
@@ -8,7 +8,8 @@
         <meta name="description" content="Todo sobre cultura nacional e internacional en Indie Post, un medio periodísitco independiente.">
         <meta name="keywords" content="Indie, periodismo, independiente, periodismo independiente, cultura, Carlos Gardel, Gardel, Museo Casa Carlos Gardel, museo, tango">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-        <link rel="stylesheet" href="../CSS/Archivo.css">
+        <!-- <link rel="stylesheet" href="../CSS/Archivo.css"> -->
+        <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../CSS/Normalize.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600&display=swap" rel="stylesheet">
@@ -56,8 +57,8 @@
             </div>
         </div>
     </nav>
-     <article id="gardel">
-        <img id="EntradaGardel" src="../Imagenes/museo_casa_carlos_gardel_9.jpg" alt="MuseoCasaCarlosGardel">
+     <article class="nota__gardel">
+        <img class="foto__gardel" src="../Imagenes/museo_casa_carlos_gardel_9.jpg" alt="MuseoCasaCarlosGardel">
         <h1>La casa del tango</h1>
         <p>Un recorrido por la casa de uno de los máximos exponentes del tango, Carlos Gardel, tras su
             reapertura.</p>
