--- a/Paginas/Deportes.html
+++ b/Paginas/Deportes.html
@@ -18,32 +18,43 @@
 </head>
 <body>
     <header>
-        <a href="./Index.html"><img class="logo" src="../Imagenes/logo.png" alt="logo"></a>
+        <a href="../index.html"><img class="logo__pagina" src="../imagenes/logo.png" alt="logo"></a>
     </header>
-    <nav class="navegacion">
-        <ul class="menu">
-            <li><a href="../Index.html">Inicio</a></li>
-            <a href="../Paginas/Tecnología.html">
-                <li>Tecnología
-            </a>
-            <ul>
-                <li><a href="./Tops.html">Tops</a></li>
-                <li><a href="./Entrevistas.html">Entrevistas</a></li>
-            </ul>
-            </li>
-            </a>
-            <li><a href="../Paginas/Sociedad.html">Sociedad</a></li>
-            <li><a href="../Paginas/Cultura.html">Cultura</a></li>
-            <li><a href="../Paginas/Deportes.html">Deportes</a></li>
-            <li><a href="../Paginas/Contacto.html" target="blank">Contacto</a></li>
-            <div class="my-navbar busqueda">
-                <form class="form-inline">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
-                </form>
-                </div>
-        </ul>
-     </nav>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand menu__nav" href="../index.html">Inicio</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link dropdown-toggle menu__nav" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="../Paginas/Tecnología.html">Tecnología</a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item menu__dropdown" href="../paginas/tops.html">Tops</a></li>
+                    <li><a class="dropdown-item menu__dropdown" href="../paginas/entrevistas.html">Entrevistas</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link menu__nav" href="../paginas/cultura.html">Cultura</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link menu__nav" href="../paginas/sociedad.html">Sociedad</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link menu__nav" href="../paginas/deportes.html">Deportes</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link menu__nav" href="../paginas/contacto.html">Contacto</a>
+                </li>
+              </ul>
+              <form class="d-flex barra__busqueda">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="boton__busqueda" type="submit">Search</button>
+              </form>
+            </div>
+        </div>
+    </nav>
      <article id="almagro">
         <img id="gimnasio" src="../Imagenes/Almagro.jpg" alt="gimnasio">
         <h1>Almagro Boxing Club: una verdadera cuna de campeones</h1>
@@ -53,16 +64,21 @@
         <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp" src="../Imagenes/Iconos/iconowhatsapp.png" alt="IconoWhatsapp"></a>
     </div>
     <footer>
+        <div class="footloose">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Et voluptatem, ex maxime incidunt quisquam adipisci a
         odit provident, est exercitationem autem sapiente vel nisi quasi reiciendis, numquam perspiciatis nulla at.
-        <div class="redes">
-            <a href="https://www.facebook.com/tomasaronnasanmartin/" target="blank"><img id="facebook" src="../Imagenes/Iconos/iconofacebook.png" alt="facebook"></a>
-            <a href="https://www.instagram.com/tomasaronna/" target="blank"><img id="instagram" src="../Imagenes/Iconos/iconoinstagram.png" alt="instagram"></a>
-            <a href="https://twitter.com/TomasAronna" target="blank"><img id="twitter" src="../Imagenes/Iconos/iconotwitter.png" alt="twitter"></a>
         </div>
-        </footer>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+        <div class="redes">
+            <a href="https://www.facebook.com/tomasaronnasanmartin/" target="blank"><img id="facebook"
+                    src="../imagenes/iconos/iconofacebook.png" alt="facebook"></a>
+            <a href="https://www.instagram.com/tomasaronna/" target="blank"><img id="instagram"
+                    src="../imagenes/iconos/iconoinstagram.png" alt="instagram"></a>
+            <a href="https://twitter.com/TomasAronna" target="blank"><img id="twitter"
+                    src="../imagenes/iconos/iconotwitter.png" alt="twitter"></a>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
 </body>
     
 </body>
