--- a/Paginas/Deportes.html
+++ b/Paginas/Deportes.html
@@ -8,7 +8,8 @@
         <meta name="description" content="Las últimas noticias deportivas en Indie Post, un medio periodístico independiente.">
         <meta name="keywords" content="Indie, periodismo, independiente, periodismo independiente, deportes">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-        <link rel="stylesheet" href="../CSS/Archivo.css">
+        <!-- <link rel="stylesheet" href="../CSS/Archivo.css"> -->
+        <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../CSS/Normalize.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600&display=swap" rel="stylesheet">
