--- a/Paginas/Deportes.html
+++ b/Paginas/Deportes.html
@@ -56,8 +56,8 @@
             </div>
         </div>
     </nav>
-     <article id="almagro">
-        <img id="gimnasio" src="../Imagenes/Almagro.jpg" alt="gimnasio">
+     <article class="nota__almagro">
+        <img class="foto__gimnasio" src="../Imagenes/Almagro.jpg" alt="gimnasio">
         <h1>Almagro Boxing Club: una verdadera cuna de campeones</h1>
         <p>Almagro Boxing Club fue el primer gimnasio de boxeo en Argentina. De él salieron grandes campeones, tanto olímpicos como mundiales.</p>
     </article>
