Apliqué estilos en la nota y modifiqué la clase

--- a/Paginas/Entrevistas.html
+++ b/Paginas/Entrevistas.html
@@ -54,7 +54,7 @@
             </div>
         </div>
     </nav>
-    <article id="nota__toscano">
+    <article class="nota__toscano">
         <img class="foto__toscano" src="../Imagenes/pablo-toscano-web-2-da-vinci.jpg" alt="fotoPabloToscano">
         <h1> Pablo Toscano, director técnico de animación de uno de los juegos más importantes de la década pasada</h1>
         <p>Pablo Toscano se fue de Argentina en 2003 hacia Quebec, donde comenzó a trabajar en la compañía Frima
