--- a/Paginas/Sociedad.html
+++ b/Paginas/Sociedad.html
@@ -23,34 +23,45 @@
 
 <body>
     <header>
-        <a href="../Index.html"><img class="logo" src="../Imagenes/logo.png" alt="logo"></a>
+        <a href="../index.html"><img class="logo__pagina" src="../imagenes/logo.png" alt="logo"></a>
     </header>
-    <nav class="navegacion">
-        <ul class="menu">
-            <li><a href="../Index.html">Inicio</a></li>
-            <a href="../Paginas/Tecnología.html">
-                <li>Tecnología
-            </a>
-            <ul>
-                <li><a href="./Tops.html">Tops</a></li>
-                <li><a href="./Entrevistas.html">Entrevistas</a></li>
-            </ul>
-            </li>
-            </a>
-            <li><a href="../Paginas/Sociedad.html">Sociedad</a></li>
-            <li><a href="../Paginas/Cultura.html">Cultura</a></li>
-            <li><a href="../Paginas/Deportes.html">Deportes</a></li>
-            <li><a href="../Paginas/Contacto.html" target="blank">Contacto</a></li>
-            <div class="my-navbar busqueda">
-                <form class="form-inline">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
-                </form>
-                </div>
-        </ul>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand menu__nav" href="../index.html">Inicio</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link dropdown-toggle menu__nav" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="../Paginas/Tecnología.html">Tecnología</a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item menu__dropdown" href="../paginas/tops.html">Tops</a></li>
+                    <li><a class="dropdown-item menu__dropdown" href="../paginas/entrevistas.html">Entrevistas</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link menu__nav" href="../paginas/cultura.html">Cultura</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link menu__nav" href="../paginas/sociedad.html">Sociedad</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link menu__nav" href="../paginas/deportes.html">Deportes</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link menu__nav" href="../paginas/contacto.html">Contacto</a>
+                </li>
+              </ul>
+              <form class="d-flex barra__busqueda">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="boton__busqueda" type="submit">Search</button>
+              </form>
+            </div>
+        </div>
     </nav>
-    <article id="arsenico">
-        <img id="casares" src="../Imagenes/carlos-casares-se-sumo-a___pIayC2QV2_1200x630__1.jpg"
+    <article class="nota__arsenico">
+        <img class="foto__casares" src="../Imagenes/carlos-casares-se-sumo-a___pIayC2QV2_1200x630__1.jpg"
             alt="CartelCarlosCasares">
         <h1>Arsénico en el agua, una problemática común en muchas ciudades argentinas</h1>
         <p>El agua es vital para el cuerpo humano pero, desde hace muchos años, en varias ciudades como Carlos
@@ -64,15 +75,17 @@
                 src="../Imagenes/Iconos/iconowhatsapp.png" alt="IconoWhatsapp"></a>
     </div>
     <footer>
+        <div class="footloose">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Et voluptatem, ex maxime incidunt quisquam adipisci a
         odit provident, est exercitationem autem sapiente vel nisi quasi reiciendis, numquam perspiciatis nulla at.
+        </div>
         <div class="redes">
             <a href="https://www.facebook.com/tomasaronnasanmartin/" target="blank"><img id="facebook"
-                    src="../Imagenes/Iconos/iconofacebook.png" alt="facebook"></a>
+                    src="../imagenes/iconos/iconofacebook.png" alt="facebook"></a>
             <a href="https://www.instagram.com/tomasaronna/" target="blank"><img id="instagram"
-                    src="../Imagenes/Iconos/iconoinstagram.png" alt="instagram"></a>
+                    src="../imagenes/iconos/iconoinstagram.png" alt="instagram"></a>
             <a href="https://twitter.com/TomasAronna" target="blank"><img id="twitter"
-                    src="../Imagenes/Iconos/iconotwitter.png" alt="twitter"></a>
+                    src="../imagenes/iconos/iconotwitter.png" alt="twitter"></a>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
