--- a/Paginas/Tecnología.html
+++ b/Paginas/Tecnología.html
@@ -54,8 +54,8 @@
             </div>
           </div>
     </nav>
-    <article id="toscano">
-        <img src="../Imagenes/pablo-toscano-web-2-da-vinci.jpg" alt="fotoPabloToscano">
+    <article class="nota__toscano">
+        <img class="foto__toscano" src="../Imagenes/pablo-toscano-web-2-da-vinci.jpg" alt="fotoPabloToscano">
         <h1> Pablo Toscano, director técnico de animación de uno de los juegos más importantes de la década pasada</h1>
         <p>Pablo Toscano se fue de Argentina en 2003 hacia Quebec, donde comenzó a trabajar en la compañía Frima
             Studios. Posteriormente, se unió al grupo de trabajo de Ubisoft Quebec, donde desarrolló uno de los juegos
