Cambié el link de whatsapp

--- a/Paginas/Tops.html
+++ b/Paginas/Tops.html
@@ -58,8 +58,7 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque delectus iusto error ad et, deleniti nesciunt assumenda eius modi totam iure nemo adipisci necessitatibus, id facilis dolore blanditiis, at ducimus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae itaque quod iure molestiae debitis provident culpa voluptatem similique ipsam vel alias, quasi placeat aut nemo vitae possimus aperiam atque explicabo! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur iste corrupti dolores fugiat nisi optio? Voluptate veritatis pariatur eveniet sint aliquam cum, libero eos beatae earum quis vel officia debitis.</p>
     
     <div>
-        <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp" src="../Imagenes/Iconos/iconowhatsapp.png"
-                    alt="IconoWhatsapp"></a>
+        <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp" src="../imagenes/iconos/iconowhatsapp.png" alt="IconoWhatsapp"></a>
     </div>
     <footer>
             <div class="footloose">
