--- a/Paginas/Sociedad.html
+++ b/Paginas/Sociedad.html
@@ -61,7 +61,7 @@
         </div>
     </nav>
     <article class="nota__arsenico">
-        <img class="foto__casares" src="../Imagenes/carlos-casares-se-sumo-a___pIayC2QV2_1200x630__1.jpg"
+        <img class="foto__casares" src="../imagenes/carlos-casares-se-sumo-a___pIayC2QV2_1200x630__1.jpg"
             alt="CartelCarlosCasares">
         <h1>Arsénico en el agua, una problemática común en muchas ciudades argentinas</h1>
         <p>El agua es vital para el cuerpo humano pero, desde hace muchos años, en varias ciudades como Carlos
@@ -71,8 +71,7 @@
         </p>
     </article>
     <div>
-        <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp"
-                src="../Imagenes/Iconos/iconowhatsapp.png" alt="IconoWhatsapp"></a>
+        <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp" src="../imagenes/iconos/iconowhatsapp.png" alt="IconoWhatsapp"></a>
     </div>
     <footer>
         <div class="footloose">
