Borre el normalice y el viejo css

--- a/Index.html
+++ b/Index.html
@@ -8,12 +8,10 @@
     <meta name="description" content="Inicio de Indie Post, un medio periodístico independiente.">
     <meta name="keywords" content="Indie, periodismo, independiente, periodismo indepentiente, deportes, sociedad, tecnologia, entrevistas, tops, cultura, pablo toscano, Assassin’s Creed, tango, Gardel, arsenico, Almagro">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="CSS/Archivo.css"> -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/Normalize.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="../imagenes/logo.png">
+    <link rel="stylesheet" href="css/style.css">
     <title>Indie Post - Inicio</title>
 </head>
 
@@ -30,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link dropdown-toggle menu__nav" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="./Paginas/Tecnología.html">Tecnología</a>
+              <a class="nav-link dropdown-toggle menu__nav" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="#">Tecnología</a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item menu__dropdown" href="./paginas/tops.html">Tops</a></li>
                 <li><a class="dropdown-item menu__dropdown" href="./paginas/entrevistas.html">Entrevistas</a></li>
