Definí el area del grid

--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a href="./Index.html">Inicio</a>
+              <a class="nav-link menu__nav"href="./Index.html">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link dropdown-toggle menu__nav" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="#">Tecnología</a>
@@ -106,33 +106,33 @@
         </main>
         <section class="grid">
             <article class="nota__toscano" tabindex="1">
-                <img class="foto__toscano" src="./imagenes/pablo-toscano-web-2-da-vinci.jpg" alt="Foto Pablo Toscano">
-                <h1>Pablo Toscano, director técnico de animación de uno de los juegos más importantes de la década
-                    pasada</h1>
-                <p>Pablo Toscano se fue de Argentina en 2003 hacia Quebec, donde comenzó a trabajar en la compañía Frima
+              <img class="nota__fotos" src="./imagenes/pablo-toscano-web-2-da-vinci.jpg" alt="Foto Pablo Toscano">
+              <h1 class="nota__titulos">Pablo Toscano, director técnico de animación de uno de los juegos más importantes de la década
+                pasada</h1>
+              <p class="nota__texto">Pablo Toscano se fue de Argentina en 2003 hacia Quebec, donde comenzó a trabajar en la compañía Frima
                     Studios. Posteriormente, se unió al grupo de trabajo de Ubisoft Quebec, donde desarrolló uno de los
                     juegos
                     más importantes del 2018, el Assassin’s Creed Odyssey.</p>
             </article>
             <article class="nota__gardel" tabindex="2">
-                <img class="foto__gardel" src="./imagenes/museo_casa_carlos_gardel_9.jpg" alt="Museo Casa Carlos Gardel">
-                <h2 class="titulo__gardel">La casa del tango</h2>
-                <p>Un recorrido por la casa de uno de los máximos exponentes del tango, Carlos Gardel, tras su
+                <img class="nota__fotos" src="./imagenes/museo_casa_carlos_gardel_9.jpg" alt="Museo Casa Carlos Gardel">
+                <h2 class="nota__titulos">La casa del tango</h2>
+                <p class="nota__texto">Un recorrido por la casa de uno de los máximos exponentes del tango, Carlos Gardel, tras su
                     reapertura.</p>
             </article>
             <article class="nota__arsenico" tabindex="3">
-                <img class="foto__casares" src="./imagenes/carlos-casares-se-sumo-a___pIayC2QV2_1200x630__1.jpg"
+                <img class="nota__fotos" src="./imagenes/carlos-casares-se-sumo-a___pIayC2QV2_1200x630__1.jpg"
                     alt="Cartel Carlos Casares">
-                <h2 class="titulo__arsenico">Arsénico en el agua, una problemática común en muchas ciudades argentinas</h2>
-                <p>El agua es vital para el cuerpo humano pero, desde hace muchos años, en varias ciudades como Carlos
+                <h2 class="nota__titulos">Arsénico en el agua, una problemática común en muchas ciudades argentinas</h2>
+                <p class="nota__texto">El agua es vital para el cuerpo humano pero, desde hace muchos años, en varias ciudades como Carlos
                     Casares y
                     Pehuajó, entre otras, sale totalmente contaminada por arsénico, un elemento químico altamente
                     tóxico.</p>
             </article>
             <article class="nota__almagro" tabindex="4">
-                <img class="foto__gimnasio" src="./imagenes/Almagro.jpg" alt="gimnasio">
-                <h2 class="titulo__almagro">Almagro Boxing Club: una verdadera cuna de campeones</h2>
-                <p>Almagro Boxing Club fue el primer gimnasio de boxeo en Argentina. De él salieron grandes campeones,
+                <img class="nota__fotos" src="./imagenes/Almagro.jpg" alt="gimnasio">
+                <h2 class="nota__titulos">Almagro Boxing Club: una verdadera cuna de campeones</h2>
+                <p class="nota__texto">Almagro Boxing Club fue el primer gimnasio de boxeo en Argentina. De él salieron grandes campeones,
                     tanto olímpicos como mundiales.</p>
             </article>
         </section>
