Modifiqué los grids del index

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     content="Indie, periodismo, independiente, periodismo indepentiente, deportes, sociedad, tecnologia, entrevistas, tops, cultura, pablo toscano, Assassin’s Creed, tango, Gardel, arsenico, Almagro">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/animate.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600&display=swap" rel="stylesheet">
   <link rel="icon" href="../imagenes/logo.png">
@@ -125,7 +126,8 @@
             <p>Pablo Toscano se fue de Argentina en 2003 hacia Quebec, donde comenzó a trabajar en la
               compañía Frima
               Studios. Posteriormente, se unió al grupo de trabajo de Ubisoft Quebec, donde desarrolló uno de los juegos
-              más importantes del 2018, el Assassin’s Creed Odyssey.</p>
+              más importantes del 2018, el Assassin’s Creed Odyssey.
+            </p>
           </div>
         </div>
       </div>
@@ -134,7 +136,8 @@
       <div class="card-img-overlay">
         <h2 class="card-text">La casa del tango</h2>
         <p class="card-text">Un recorrido por la casa de uno de los máximos exponentes del tango, Carlos Gardel, tras su
-          reapertura.</p>
+          reapertura.
+        </p>
       </div>
     </div>
     <div class="card nota__arsenico">
@@ -144,7 +147,8 @@
           como Carlos
           Casares y
           Pehuajó, entre otras, sale totalmente contaminada por arsénico, un elemento químico altamente
-          tóxico.</p>
+          tóxico.
+        </p>
       </div>
     </div>
     <div class="card nota__boxeo">
@@ -152,9 +156,38 @@
         <h1 class="card-text">Almagro Boxing Club: una verdadera cuna de campeones</h1>
         <p class="card-text">Almagro Boxing Club fue el primer gimnasio de boxeo en Argentina. De él salieron grandes
           campeones, tanto
-          olímpicos como mundiales.</p>
+          olímpicos como mundiales.
+        </p>
       </div>
     </div>
+    <a href="./paginas/entrevista-toscano.html">
+      <div class="card nota__toscano">
+        <div class="card-img-overlay">
+          <div class="card-text">
+            <h1>Pablo Toscano, director técnico de animación de uno de los juegos más importantes de la década pasada
+            </h1>
+            <p>Pablo Toscano se fue de Argentina en 2003 hacia Quebec, donde comenzó a trabajar en la
+              compañía Frima
+              Studios. Posteriormente, se unió al grupo de trabajo de Ubisoft Quebec, donde desarrolló uno de los juegos
+              más importantes del 2018, el Assassin’s Creed Odyssey.</p>
+          </div>
+        </div>
+      </div>
+    </a>
+    <a href="./paginas/entrevista-toscano.html">
+      <div class="card nota__toscano">
+        <div class="card-img-overlay">
+          <div class="card-text">
+            <h1>Pablo Toscano, director técnico de animación de uno de los juegos más importantes de la década pasada
+            </h1>
+            <p>Pablo Toscano se fue de Argentina en 2003 hacia Quebec, donde comenzó a trabajar en la
+              compañía Frima
+              Studios. Posteriormente, se unió al grupo de trabajo de Ubisoft Quebec, donde desarrolló uno de los juegos
+              más importantes del 2018, el Assassin’s Creed Odyssey.</p>
+          </div>
+        </div>
+      </div>
+    </a>
   </section>
   <div>
     <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp" src="./imagenes/Iconos/iconowhatsapp.png"
@@ -180,7 +213,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
     integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG"
     crossorigin="anonymous"></script>
-
+  <script src="js/wow.min.js"></script>
+  <script>
+    new WOW().init();
+  </script>
 </body>
 
 </html>
