Apliqué el fade in a las cards

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
   </main>
   <section class="grid">
-    <a href="./paginas/entrevista-toscano.html">
+    <a href="./paginas/entrevista-toscano.html" class="animate__animated animate__fadeIn  wow">
       <div class="card nota__toscano">
         <div class="card-img-overlay">
           <div class="card-text">
@@ -132,35 +132,42 @@
         </div>
       </div>
     </a>
-    <div class="card nota__gardel">
-      <div class="card-img-overlay">
-        <h2 class="card-text">La casa del tango</h2>
-        <p class="card-text">Un recorrido por la casa de uno de los máximos exponentes del tango, Carlos Gardel, tras su
-          reapertura.
-        </p>
+    <a href="./paginas/entrevista-toscano.html" class="animate__animated animate__fadeIn  wow">
+      <div class="card nota__gardel">
+        <div class="card-img-overlay">
+          <h2 class="card-text">La casa del tango</h2>
+          <p class="card-text">Un recorrido por la casa de uno de los máximos exponentes del tango, Carlos Gardel, tras
+            su
+            reapertura.
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="card nota__arsenico">
-      <div class="card-img-overlay">
-        <h1 class="card-text">Arsénico en el agua, una problemática común en muchas ciudades argentinas</h1>
-        <p class="card-text">El agua es vital para el cuerpo humano pero, desde hace muchos años, en varias ciudades
-          como Carlos
-          Casares y
-          Pehuajó, entre otras, sale totalmente contaminada por arsénico, un elemento químico altamente
-          tóxico.
-        </p>
+    </a>
+    <a href="./paginas/entrevista-toscano.html" class="animate__animated animate__fadeIn  wow">
+      <div class="card nota__arsenico">
+        <div class="card-img-overlay">
+          <h1 class="card-text">Arsénico en el agua, una problemática común en muchas ciudades argentinas</h1>
+          <p class="card-text">El agua es vital para el cuerpo humano pero, desde hace muchos años, en varias ciudades
+            como Carlos
+            Casares y
+            Pehuajó, entre otras, sale totalmente contaminada por arsénico, un elemento químico altamente
+            tóxico.
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="card nota__boxeo">
-      <div class="card-img-overlay">
-        <h1 class="card-text">Almagro Boxing Club: una verdadera cuna de campeones</h1>
-        <p class="card-text">Almagro Boxing Club fue el primer gimnasio de boxeo en Argentina. De él salieron grandes
-          campeones, tanto
-          olímpicos como mundiales.
-        </p>
+    </a>
+    <a href="./paginas/entrevista-toscano.html" class="animate__animated animate__fadeIn  wow">
+      <div class="card nota__boxeo">
+        <div class="card-img-overlay">
+          <h1 class="card-text">Almagro Boxing Club: una verdadera cuna de campeones</h1>
+          <p class="card-text">Almagro Boxing Club fue el primer gimnasio de boxeo en Argentina. De él salieron grandes
+            campeones, tanto
+            olímpicos como mundiales.
+          </p>
+        </div>
       </div>
-    </div>
-    <a href="./paginas/entrevista-toscano.html">
+    </a>
+    <a href="./paginas/entrevista-toscano.html" class="animate__animated animate__fadeIn  wow">
       <div class="card nota__toscano">
         <div class="card-img-overlay">
           <div class="card-text">
@@ -174,7 +181,7 @@
         </div>
       </div>
     </a>
-    <a href="./paginas/entrevista-toscano.html">
+    <a href="./paginas/entrevista-toscano.html" class="animate__animated animate__fadeIn  wow">
       <div class="card nota__toscano">
         <div class="card-img-overlay">
           <div class="card-text">
@@ -189,10 +196,7 @@
       </div>
     </a>
   </section>
-  <div>
-    <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp" src="./imagenes/Iconos/iconowhatsapp.png"
-        alt="IconoWhatsapp"></a>
-  </div>
+
   <footer>
     <div class="footloose">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Et voluptatem, ex maxime incidunt quisquam adipisci a
@@ -200,11 +204,17 @@
     </div>
     <div class="redes">
       <a href="https://www.facebook.com/tomasaronnasanmartin/" target="blank"><img id="facebook"
-          src="./imagenes/iconos/iconofacebook.png" alt="facebook"></a>
+          src="./imagenes/iconos/iconofacebook.png" alt="facebook">
+      </a>
       <a href="https://www.instagram.com/tomasaronna/" target="blank"><img id="instagram"
-          src="./imagenes/iconos/iconoinstagram.png" alt="instagram"></a>
+          src="./imagenes/iconos/iconoinstagram.png" alt="instagram">
+      </a>
       <a href="https://twitter.com/TomasAronna" target="blank"><img id="twitter"
-          src="./imagenes/iconos/iconotwitter.png" alt="twitter"></a>
+          src="./imagenes/iconos/iconotwitter.png" alt="twitter">
+      </a>
+      <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp" src="./imagenes/Iconos/iconowhatsapp.png"
+          alt="IconoWhatsapp">
+      </a>
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
