Transcribí la nota en entrevista-toscano

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
   <footer>
     <div class="footloose">
-      <p>Post, un medio creado por un periodista independiente.</p>
+      <p>Indie Post, un medio creado por un periodista independiente.</p>
       <p>Todos los derechos reservados</p>
     </div>
     <div class="redes">
