Transcribí la nota en nota-tops

--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
       <div class="card nota__gardel">
         <div class="card-img-overlay">
           <div class="card-text">
-            <h2>La casa del tango
-            </h2>
+            <h2>La casa del tango</h2>
             <p>Un recorrido por la casa de uno de los máximos exponentes del tango, Carlos Gardel, tras su
               reapertura.
             </p>
@@ -149,8 +148,7 @@
       <div class="card nota__arsenico">
         <div class="card-img-overlay">
           <div class="card-text">
-            <h1>Arsénico en el agua, una problemática común en muchas ciudades argentinas
-            </h1>
+            <h1>Arsénico en el agua, una problemática común en muchas ciudades argentinas</h1>
             <p>El agua es vital para el cuerpo humano pero, desde hace muchos años, en varias ciudades como Carlos
               Casares y
               Pehuajó, entre otras, sale totalmente contaminada por arsénico, un elemento químico altamente
@@ -161,37 +159,35 @@
       </div>
     </a>
     <!-- <a href="./paginas/entrevista-toscano.html" class="animate__animated animate__fadeIn  wow"> -->
-      <div class="card nota__boxeo">
-        <div class="card-img-overlay">
-          <div class="card-text">
-            <h1>Almagro Boxing Club: una verdadera cuna de campeones
-            </h1>
-            <p>Almagro Boxing Club fue el primer gimnasio de boxeo en Argentina. De él salieron grandes campeones, tanto
-              olímpicos como mundiales.
-            </p>
-          </div>
+    <div class="card nota__boxeo">
+      <div class="card-img-overlay">
+        <div class="card-text">
+          <h1>Almagro Boxing Club: una verdadera cuna de campeones</h1>
+          <p>Almagro Boxing Club fue el primer gimnasio de boxeo en Argentina. De él salieron grandes campeones, tanto
+            olímpicos como mundiales.
+          </p>
         </div>
       </div>
+    </div>
     </a>
-    <!-- <a href="./paginas/entrevista-toscano.html" class="animate__animated animate__fadeIn  wow"> -->
-      <div class="card nota__tops">
-        <div class="card-img-overlay">
-          <div class="card-text">
-            <h1>Los simuladores más extraños en el mundo de los videojuegos
-            </h1>
-            <p>Existen simuladores de todo tipo, simuladores de vida como "Los Sims", de deportes como el "Fifa", de
-              carreras como las franquicias "Forza" y "Gran Turismo", pero también existen algunos más insólitos. Este
-              es un recorrido por los 10 simuladores más extraños en los videojuegos</p>
-          </div>
+    <a href="./paginas/nota-tops.html" class="animate__animated animate__fadeIn  wow">
+    <div class="card nota__tops">
+      <div class="card-img-overlay">
+        <div class="card-text">
+          <h1>Los simuladores más extraños en el mundo de los videojuegos</h1>
+          <p>En la industria de los videojuegos existen simuladores de todo tipo, simuladores de vida como "Los Sims",
+            de deportes como el "Fifa", de
+            carreras como las franquicias "Forza" y "Gran Turismo", pero también existen algunos más insólitos. Este
+            es un recorrido por los 5 simuladores más extraños en los videojuegos.</p>
         </div>
       </div>
+    </div>
     </a>
     <a href="./paginas/entrevista-toscano.html" class="animate__animated animate__fadeIn  wow">
       <div class="card nota__toscano">
         <div class="card-img-overlay">
           <div class="card-text">
-            <h1>Pablo Toscano, director técnico de animación de uno de los juegos más importantes de la década pasada
-            </h1>
+            <h1>Pablo Toscano, director técnico de animación de uno de los juegos más importantes de la década pasada</h1>
             <p>Pablo Toscano se fue de Argentina en 2003 hacia Quebec, donde comenzó a trabajar en la
               compañía Frima
               Studios. Posteriormente, se unió al grupo de trabajo de Ubisoft Quebec, donde desarrolló uno de los juegos
