Cambie los metas

--- a/paginas/entrevista-toscano.html
+++ b/paginas/entrevista-toscano.html
@@ -15,7 +15,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600&display=swap" rel="stylesheet">
   <link rel="icon" href="../imagenes/logo.png">
   <link rel="stylesheet" href="css/style.css">
-  <title>Indie Post - Entrevista</title>
+  <title>Indie Post - Entrevista con Pablo Toscano</title>
 </head>
 
 <body>
