--- a/paginas/nota-tops.html
+++ b/paginas/nota-tops.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Los mejores tops tecnológicos de la web en Indie Post, un medio periodismo independiente.">
+        content="Los 5 simuladores más extraños de los videojuegos en Indie Post, un medio periodismo independiente.">
     <meta name="keywords"
         content="Indie, periodismo, independiente, periodismo independiente, tecnologia, tops y cultura">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="../Imagenes/logo.png">
-    <title>Indie Post - Tops</title>
+    <title>Indie Post - Top 5 simuladores extraños</title>
 </head>
 
 <body>
