Saqué el comentario del link

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         </div>
       </div>
     </a>
-    <!-- <a href="./paginas/entrevista-toscano.html" class="animate__animated animate__fadeIn  wow"> -->
+    <a href="./paginas/nota-boxeo.html" class="animate__animated animate__fadeIn  wow">
     <div class="card nota__boxeo">
       <div class="card-img-overlay">
         <div class="card-text">
