--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
       </div>
     </a>
-    <a href="./paginas/entrevista-toscano.html" class="animate__animated animate__fadeIn  wow">
+    <a href="./paginas/nota-gardel.html" class="animate__animated animate__fadeIn  wow">
       <div class="card nota__gardel">
         <div class="card-img-overlay">
           <div class="card-text">
