Cambié el meta description

--- a/paginas/nota-arsenico.html
+++ b/paginas/nota-arsenico.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Enterate de las últimas noticias sobre sociedad en Indie Post, un medio periodístico independiente.">
+        content="Un especial sobre el arsénico en el agua en la provinciade Buenos Aires en Indie Post, un medio periodístico independiente.">
     <meta name="keywords"
         content="Indie, periodismo, independiente, periodismo independiente, sociedad, agua, arsenico, carlos casares">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
