--- a/paginas/nota-gardel.html
+++ b/paginas/nota-gardel.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Todo sobre cultura nacional e internacional en Indie Post, un medio periodísitco independiente.">
+        content="Un recorrido por el museo Casa Carlos Gardel en Indie Post, un medio periodísitco independiente.">
     <meta name="keywords"
         content="Indie, periodismo, independiente, periodismo independiente, cultura, Carlos Gardel, Gardel, Museo Casa Carlos Gardel, museo, tango">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
