--- a/paginas/nota-boxeo.html
+++ b/paginas/nota-boxeo.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Las últimas noticias deportivas en Indie Post, un medio periodístico independiente.">
+        content="Almagro Boxing Club, el primer gimnasio de boxeo de Argentina en Indie Post, un medio periodístico independiente.">
     <meta name="keywords" content="Indie, periodismo, independiente, periodismo independiente, deportes">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
