Linkee la nota-siria

--- a/index.html
+++ b/index.html
@@ -183,15 +183,12 @@
       </div>
     </div>
     </a>
-    <a href="./paginas/entrevista-toscano.html" class="animate__animated animate__fadeIn  wow">
-      <div class="card nota__toscano">
+    <a href="./paginas/nota-siria.html" class="animate__animated animate__fadeIn  wow">
+      <div class="card nota__siria">
         <div class="card-img-overlay">
           <div class="card-text">
-            <h1>Pablo Toscano, director técnico de animación de uno de los juegos más importantes de la década pasada</h1>
-            <p>Pablo Toscano se fue de Argentina en 2003 hacia Quebec, donde comenzó a trabajar en la
-              compañía Frima
-              Studios. Posteriormente, se unió al grupo de trabajo de Ubisoft Quebec, donde desarrolló uno de los juegos
-              más importantes del 2018, el Assassin’s Creed Odyssey.</p>
+            <h1>La guerra en Siria</h1>
+            <p>El conflicto bélico en Siria parece no tener fin tras 10 años de enfrentamiento.</p>
           </div>
         </div>
       </div>
