Modifiqué el meta description

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Inicio de Indie Post, un medio periodístico independiente.">
   <meta name="keywords"
-    content="Indie, periodismo, independiente, periodismo indepentiente, deportes, sociedad, tecnologia, entrevistas, tops, cultura, pablo toscano, Assassin’s Creed, tango, Gardel, arsenico, Almagro">
+    content="Indie, periodismo, independiente, periodismo indepentiente, deportes, sociedad, tecnologia, entrevistas, tops, cultura, pablo toscano, Assassin’s Creed, tango, Gardel, arsenico, Almagro, guerra, Siria">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <link rel="stylesheet" href="css/animate.css">
