Modifiqué la nota

--- a/paginas/nota-siria.html
+++ b/paginas/nota-siria.html
@@ -81,8 +81,7 @@
             conflicto bélico es muy importante, porque Siria tiene frontera con este país, además si quitan a Al Assad
             del gobierno “no tienen a quien poner”. “A mí los sirios rebeldes me dijeron que el día que terminen con el
             presidente sirio, van a reconquistar Palestina. Los israelíes no van a apoyar a unos rebeldes que pueden
-            poner en riesgo a su país”, expresó recientemente en una conferencia de prensa brindada para alumnos de
-            primer año de la escuela de periodismo Tea, en el Paseo La Plaza.
+            poner en riesgo a su país”, expresó recientemente en conferencia de prensa brindada.
         </p>
         <p>
             En cambio, Shadi Lamia, primer secretario de la embajada siria en Argentina, dijo: “Lo que hace el Estado
