Cambié la estética

--- a/paginas/sociedad.html
+++ b/paginas/sociedad.html
@@ -61,16 +61,20 @@
       </div>
     </div>
   </nav>
-  <article class="nota__arsenico">
-    <img class="foto__casares" src="../imagenes/carlos-casares-se-sumo-a___pIayC2QV2_1200x630__1.jpg"
-      alt="CartelCarlosCasares">
-    <h1>Arsénico en el agua, una problemática común en muchas ciudades argentinas</h1>
-    <p>El agua es vital para el cuerpo humano pero, desde hace muchos años, en varias ciudades como Carlos
-      Casares y
-      Pehuajó, entre otras, sale totalmente contaminada por arsénico, un elemento químico altamente
-      tóxico.
-    </p>
-  </article>
+  <a href="./paginas/nota-arsenico.html" class="animate__animated animate__fadeIn  wow">
+    <div class="card nota__arsenico">
+      <div class="card-img-overlay">
+        <div class="card-text">
+          <h1>Arsénico en el agua, una problemática común en muchas ciudades argentinas</h1>
+          <p>El agua es vital para el cuerpo humano pero, desde hace muchos años, en varias ciudades como Carlos
+            Casares y
+            Pehuajó, entre otras, sale totalmente contaminada por arsénico, un elemento químico altamente
+            tóxico.
+          </p>
+        </div>
+      </div>
+    </div>
+  </a>
   <div>
     <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp" src="../imagenes/iconos/iconowhatsapp.png"
         alt="IconoWhatsapp"></a>
