Modifiqué el footer

--- a/paginas/sociedad.html
+++ b/paginas/sociedad.html
@@ -2,22 +2,22 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-      content="Enterate de las últimas noticias sobre sociedad en Indie Post, un medio periodístico independiente.">
-    <meta name="keywords"
-      content="Indie, periodismo, independiente, periodismo independiente, sociedad, agua, arsenico, carlos casares">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="../CSS/Archivo.css"> -->
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../CSS/Normalize.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="icon" href="../Imagenes/logo.png">
-    <title>Indie Post - Sociedad</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Enterate de las últimas noticias sobre sociedad en Indie Post, un medio periodístico independiente.">
+  <meta name="keywords"
+    content="Indie, periodismo, independiente, periodismo independiente, sociedad, agua, arsenico, carlos casares">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="../CSS/Archivo.css"> -->
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../CSS/Normalize.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600&display=swap" rel="stylesheet">
+  <link rel="icon" href="../Imagenes/logo.png">
+  <title>Indie Post - Sociedad</title>
 </head>
 
 <body>
@@ -81,16 +81,22 @@
   </div>
   <footer>
     <div class="footloose">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Et voluptatem, ex maxime incidunt quisquam adipisci a
-      odit provident, est exercitationem autem sapiente vel nisi quasi reiciendis, numquam perspiciatis nulla at.
+      <p>Indie Post, un medio creado por un periodista independiente.</p>
+      <p>Todos los derechos reservados</p>
     </div>
     <div class="redes">
       <a href="https://www.facebook.com/tomasaronnasanmartin/" target="blank"><img id="facebook"
-          src="../imagenes/iconos/iconofacebook.png" alt="facebook"></a>
+          src="../imagenes/iconos/iconofacebook.png" alt="facebook">
+      </a>
       <a href="https://www.instagram.com/tomasaronna/" target="blank"><img id="instagram"
-          src="../imagenes/iconos/iconoinstagram.png" alt="instagram"></a>
+          src="../imagenes/iconos/iconoinstagram.png" alt="instagram">
+      </a>
       <a href="https://twitter.com/TomasAronna" target="blank"><img id="twitter"
-          src="../imagenes/iconos/iconotwitter.png" alt="twitter"></a>
+          src="../imagenes/iconos/iconotwitter.png" alt="twitter">
+      </a>
+      <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp" src="../imagenes/Iconos/iconowhatsapp.png"
+          alt="IconoWhatsapp">
+      </a>
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
