Modifiqué el estilo

--- a/paginas/tops.html
+++ b/paginas/tops.html
@@ -59,38 +59,43 @@
       </div>
     </div>
   </nav>
-
-  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque delectus iusto error ad et, deleniti nesciunt
-    assumenda eius modi totam iure nemo adipisci necessitatibus, id facilis dolore blanditiis, at ducimus. Lorem ipsum
-    dolor sit amet, consectetur adipisicing elit. Recusandae itaque quod iure molestiae debitis provident culpa
-    voluptatem similique ipsam vel alias, quasi placeat aut nemo vitae possimus aperiam atque explicabo! Lorem, ipsum
-    dolor sit amet consectetur adipisicing elit. Pariatur iste corrupti dolores fugiat nisi optio? Voluptate veritatis
-    pariatur eveniet sint aliquam cum, libero eos beatae earum quis vel officia debitis.</p>
-
+  <a href="./paginas/nota-tops.html" class="animate__animated animate__fadeIn  wow">
+    <div class="card nota__tops">
+      <div class="card-img-overlay">
+        <div class="card-text">
+          <h1>Los simuladores más extraños en el mundo de los videojuegos</h1>
+          <p>En la industria de los videojuegos existen simuladores de todo tipo, simuladores de vida como "Los Sims",
+            de deportes como el "Fifa", de
+            carreras como las franquicias "Forza" y "Gran Turismo", pero también existen algunos más insólitos. Este
+            es un recorrido por los 5 simuladores más extraños en los videojuegos.</p>
+        </div>
+      </div>
+    </div>
+  </a>
   <div>
     <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp" src="../imagenes/iconos/iconowhatsapp.png"
         alt="IconoWhatsapp"></a>
   </div>
   <footer>
     <div class="footloose">
-        <p>Indie Post, un medio creado por un periodista independiente.</p>
-        <p>Todos los derechos reservados</p>
+      <p>Indie Post, un medio creado por un periodista independiente.</p>
+      <p>Todos los derechos reservados</p>
     </div>
     <div class="redes">
-        <a href="https://www.facebook.com/tomasaronnasanmartin/" target="blank"><img id="facebook"
-                src="../imagenes/iconos/iconofacebook.png" alt="facebook">
-        </a>
-        <a href="https://www.instagram.com/tomasaronna/" target="blank"><img id="instagram"
-                src="../imagenes/iconos/iconoinstagram.png" alt="instagram">
-        </a>
-        <a href="https://twitter.com/TomasAronna" target="blank"><img id="twitter"
-                src="../imagenes/iconos/iconotwitter.png" alt="twitter">
-        </a>
-        <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp"
-                src="../imagenes/Iconos/iconowhatsapp.png" alt="IconoWhatsapp">
-        </a>
+      <a href="https://www.facebook.com/tomasaronnasanmartin/" target="blank"><img id="facebook"
+          src="../imagenes/iconos/iconofacebook.png" alt="facebook">
+      </a>
+      <a href="https://www.instagram.com/tomasaronna/" target="blank"><img id="instagram"
+          src="../imagenes/iconos/iconoinstagram.png" alt="instagram">
+      </a>
+      <a href="https://twitter.com/TomasAronna" target="blank"><img id="twitter"
+          src="../imagenes/iconos/iconotwitter.png" alt="twitter">
+      </a>
+      <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp" src="../imagenes/Iconos/iconowhatsapp.png"
+          alt="IconoWhatsapp">
+      </a>
     </div>
-</footer>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
     integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi"
     crossorigin="anonymous"></script>
